--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>
-            (Это title) Пример страницы на HTML5
+            Vue.js Samples
         </title>
         <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     </head>
@@ -43,6 +43,14 @@
                     v-bind:key="item.id">
                 </todo-item>
             </ol>
+        </div>
+        <div id="app-8">
+            <p>Двойные фигурные скобки: {{ rawHtml }}</p>
+            <p>Директива v-html: <span v-html="rawHtml"></span></p>
+        </div>
+        <div id="app-9">
+            <p>Изначальное сообщение: "{{ message }}"</p>
+            <p>Сообщение задом наперёд: "{{ reversedMessage }}"</p>
         </div>
     </body>
     <script>
@@ -104,6 +112,24 @@
                     { id: 2, text: 'Что там ещё люди едят?' }
                 ]
             }
+        });
+        var app8 = new Vue({
+            el: '#app-8',
+            data: {
+                rawHtml: '<span style="color: red">Этот текст должен быть красным</span>'
+            }
+        });
+        var app9 = new Vue({
+            el: '#app-9',
+            data: {
+                message: 'Hello'
+            },
+            computed: {
+                reversedMessage: function () {
+                  return this.message.split('').reverse().join('')
+                }
+            }
+
         });
     </script>
 </html>
